{
  "version": 4,
  "terraform_version": "1.0.8",
  "serial": 4,
  "lineage": "e095b054-337f-a9b6-b747-2f348c1b4ef6",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "Sarath-NSG",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/00726fcc-7e50-4a1c-b11a-cc61a850ef2b/resourceGroups/ResourceGroup-NSG/providers/Microsoft.Network/networkSecurityGroups/NSG-TEST",
            "location": "centralus",
            "name": "NSG-TEST",
            "resource_group_name": "ResourceGroup-NSG",
            "security_rule": [],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.Sarath-NSG"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "Sarath-NSG",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "*",
            "destination_port_ranges": null,
            "direction": "Outbound",
            "id": "/subscriptions/00726fcc-7e50-4a1c-b11a-cc61a850ef2b/resourceGroups/ResourceGroup-NSG/providers/Microsoft.Network/networkSecurityGroups/NSG-TEST/securityRules/NSG-TEST-RULe",
            "name": "NSG-TEST-RULe",
            "network_security_group_name": "NSG-TEST",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "ResourceGroup-NSG",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.Sarath-NSG",
            "azurerm_resource_group.Sarath-NSG"
          ]
        }
      ]
    }
  ]
}